<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.synclite.jobmonitor</groupId>
	<artifactId>synclite-jobmonitor</artifactId>
	<version>${revision}</version>
	<packaging>war</packaging>
	<parent>
		<groupId>com.synclite.jobmonitor</groupId>
		<artifactId>root</artifactId>
		<version>${revision}</version>
	</parent>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
		    <!-- Clean the output directory -->
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-clean-plugin</artifactId>
		      <version>3.1.0</version>
		      <executions>
		        <execution>
		          <id>clean-output</id>
		          <phase>pre-clean</phase>
		          <goals>
		            <goal>clean</goal>
		          </goals>
		          <configuration>
		            <filesets>
		              <fileset>
		                <directory>${project.basedir}/src/main/webapp/WEB-INF/lib</directory>
		                <includes>
		                  <include>**/*</include>
		                </includes>
		              </fileset>
		            </filesets>
		          </configuration>
		        </execution>
		      </executions>
		    </plugin>
	
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/lib</outputDirectory>
							<resources>							
								<resource>
									<directory> ${project.build.directory}/classes/</directory>
									<includes>
										<include>synclite.version</include>
									</includes>
								</resource>
								<resource>
									<directory>${project.basedir}/../../../SyncLiteLicenseGenerator/license/src/main/resources/</directory>
									<includes>
										<include>synclite_end_user_license_agreement.txt</include>
										<include>synclite_privacy_terms.txt</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>					
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.3</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.46.1.3</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>	

		<dependency>
			<groupId>ch.qos.reload4j</groupId>
			<artifactId>reload4j</artifactId>
			<version>1.2.26</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>2.0.13</version>
		</dependency>

		<dependency>
			<groupId>org.owasp.encoder</groupId>
			<artifactId>encoder</artifactId>
			<version>1.3.1</version>
		</dependency>
		
		<dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>
        
		<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
		<dependency>
		    <groupId>org.quartz-scheduler</groupId>
		    <artifactId>quartz</artifactId>
		    <version>2.5.0</version>
		</dependency>

	</dependencies>
</project>